Making changes to build using Cmake for WinRT

--- a/modules/optim/CMakeLists.txt
+++ b/modules/optim/CMakeLists.txt
@@ -1,2 +1,6 @@
+if (WINRT)
+  ocv_module_disable(optim)
+endif()
+
 set(the_description "Generic optimization")
 ocv_define_module(optim opencv_core)
