--- a/modules/highgui/CMakeLists.txt
+++ b/modules/highgui/CMakeLists.txt
@@ -1,3 +1,7 @@
+if (WINRT)
+  ocv_module_disable(highgui)
+endif()
+
 set(the_description "High-level GUI and Media I/O")
 ocv_add_module(highgui opencv_imgproc OPTIONAL opencv_androidcamera)
 
@@ -9,9 +13,9 @@ ocv_add_module(highgui opencv_imgproc OPTIONAL opencv_androidcamera)
 
 ocv_clear_vars(GRFMT_LIBS)
 
-if(HAVE_WINRT_CX)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /ZW")
-endif()
+# if(HAVE_WINRT_CX)
+#   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /ZW")
+# endif()
 
 if(HAVE_PNG OR HAVE_TIFF OR HAVE_OPENEXR)
   ocv_include_directories(${ZLIB_INCLUDE_DIRS})
