Updated winrt/MediaCapture (aka ImageManipulations) sample and dependent projects to use new OCV Win8.1 Store project files and paths.

--- a/samples/winrt/ImageManipulations/MediaCapture.vcxproj.filters
+++ b/samples/winrt/ImageManipulations/MediaCapture.vcxproj.filters
@@ -50,4 +50,7 @@
       <UniqueIdentifier>{392352d8-f913-4741-82cf-d8075bb6f022}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="MediaCapture_TemporaryKey.pfx" />
+  </ItemGroup>
 </Project>
