--- a/binWP8_1/modules/imgproc/opencv_imgproc.vcxproj
+++ b/binWP8_1/modules/imgproc/opencv_imgproc.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="Windows-1252"?>
+<?xml version="1.0" encoding="us-ascii"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -11,11 +11,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGUID>{3DA609BA-E1DC-4101-AE86-DA3078324C7B}</ProjectGUID>
+    <ProjectGUID>{13FBA904-B1B8-4DE3-AE7B-D6ABAED9E24C}</ProjectGUID>
     <ApplicationType>Windows Phone</ApplicationType>
     <ApplicationTypeRevision>8.1</ApplicationTypeRevision>
     <MinimumVisualStudioVersion>12.0</MinimumVisualStudioVersion>
-    <AppContainerApplication>true</AppContainerApplication>    <Keyword>Win32Proj</Keyword>
+    <AppContainerApplication>true</AppContainerApplication>
+    <Keyword>Win32Proj</Keyword>
     <Platform>Win32</Platform>
     <ProjectName>opencv_imgproc</ProjectName>
   </PropertyGroup>
@@ -39,21 +40,24 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-    <PropertyGroup>
-      <_ProjectFileVersion>10.0.20506.1</_ProjectFileVersion>
-      <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\projects\OpenCV\MSOpencv-cmake\binWP8_1\bin\Debug\</OutDir>
-      <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">opencv_imgproc.dir\Debug\</IntDir>
-      <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">opencv_imgproc300d</TargetName>
-      <TargetExt Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.dll</TargetExt>
-      <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</LinkIncremental>
-      <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</GenerateManifest>
-      <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:\projects\OpenCV\MSOpencv-cmake\binWP8_1\bin\Release\</OutDir>
-      <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">opencv_imgproc.dir\Release\</IntDir>
-      <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">opencv_imgproc300</TargetName>
-      <TargetExt Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.dll</TargetExt>
-      <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkIncremental>
-      <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</GenerateManifest>
-    </PropertyGroup>
+  <PropertyGroup>
+    <_ProjectFileVersion>10.0.20506.1</_ProjectFileVersion>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\projects\OpenCV\MSOpencv-cmake\binWP8_1\bin\Debug\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">opencv_imgproc.dir\Debug\</IntDir>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">opencv_imgproc300d</TargetName>
+    <TargetExt Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.dll</TargetExt>
+    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</LinkIncremental>
+    <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</GenerateManifest>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:\projects\OpenCV\MSOpencv-cmake\binWP8_1\bin\Release\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">opencv_imgproc.dir\Release\</IntDir>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">opencv_imgproc300</TargetName>
+    <TargetExt Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.dll</TargetExt>
+    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkIncremental>
+    <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</GenerateManifest>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IgnoreImportLibrary>false</IgnoreImportLibrary>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <AdditionalOptions> /bigobj %(AdditionalOptions)</AdditionalOptions>
@@ -98,10 +102,11 @@
       <ImportLibrary>D:/projects/OpenCV/MSOpencv-cmake/binWP8_1/lib/Debug/opencv_imgproc300d.lib</ImportLibrary>
       <ProgramDataBaseFile>D:/projects/OpenCV/MSOpencv-cmake/binWP8_1/bin/Debug/opencv_imgproc300d.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
-      <Version></Version>
+      <Version>
+      </Version>
     </Link>
     <ProjectReference>
-      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -148,7 +153,8 @@
       <ImportLibrary>D:/projects/OpenCV/MSOpencv-cmake/binWP8_1/lib/Release/opencv_imgproc300.lib</ImportLibrary>
       <ProgramDataBaseFile>D:/projects/OpenCV/MSOpencv-cmake/binWP8_1/bin/Release/opencv_imgproc300.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
-      <Version></Version>
+      <Version>
+      </Version>
     </Link>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
@@ -225,54 +231,54 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClInclude Include="..\..\..\modules\imgproc\src\_geom.h" />
     <ClInclude Include="..\..\cvconfig.h" />
     <ClInclude Include="..\..\opencv2\opencv_modules.hpp" />
-    <ClCompile Include="..\..\..\modules\imgproc\src\accum.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\approx.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\blend.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\canny.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\clahe.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\color.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\connectedcomponents.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\contours.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\convhull.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\corner.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\cornersubpix.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\demosaicing.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\deriv.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\distransform.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\emd.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\featureselect.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\filter.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\floodfill.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\gabor.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\generalized_hough.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\geometry.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\grabcut.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\histogram.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\hough.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\imgwarp.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\intersection.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\linefit.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\lsd.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\matchcontours.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\min_enclosing_triangle.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\moments.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\morph.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\phasecorr.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\pyramids.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\rotcalipers.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\samplers.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\segmentation.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\shapedescr.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\smooth.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\subdivision2d.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\sumpixels.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\tables.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\templmatch.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\thresh.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\undistort.cpp"  />
-    <ClCompile Include="..\..\..\modules\imgproc\src\utils.cpp"  />
-    <ClCompile Include="opencl_kernels.cpp"  />
-    <ClCompile Include="opencv_imgproc_pch.cpp" >
+    <ClCompile Include="..\..\..\modules\imgproc\src\accum.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\approx.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\blend.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\canny.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\clahe.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\color.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\connectedcomponents.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\contours.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\convhull.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\corner.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\cornersubpix.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\demosaicing.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\deriv.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\distransform.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\emd.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\featureselect.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\filter.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\floodfill.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\gabor.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\generalized_hough.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\geometry.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\grabcut.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\histogram.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\hough.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\imgwarp.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\intersection.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\linefit.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\lsd.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\matchcontours.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\min_enclosing_triangle.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\moments.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\morph.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\phasecorr.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\pyramids.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\rotcalipers.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\samplers.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\segmentation.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\shapedescr.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\smooth.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\subdivision2d.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\sumpixels.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\tables.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\templmatch.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\thresh.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\undistort.cpp" />
+    <ClCompile Include="..\..\..\modules\imgproc\src\utils.cpp" />
+    <ClCompile Include="opencl_kernels.cpp" />
+    <ClCompile Include="opencv_imgproc_pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/projects/OpenCV/MSOpencv-cmake/modules/imgproc/src/precomp.hpp</PrecompiledHeaderFile>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
