--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,7 +360,7 @@ if(INSTALL_TO_MANGLED_PATHS)
   set(OPENCV_INCLUDE_INSTALL_PATH ${OPENCV_INCLUDE_INSTALL_PATH}/opencv-${OPENCV_VERSION})
 endif()
 
-if(WIN32)
+if(WIN32 AND NOT WINRT)
   # Postfix of DLLs:
   set(OPENCV_DLLVERSION "${OPENCV_VERSION_MAJOR}${OPENCV_VERSION_MINOR}${OPENCV_VERSION_PATCH}")
   set(OPENCV_DEBUG_POSTFIX d)
@@ -370,7 +370,7 @@ else()
   set(OPENCV_DEBUG_POSTFIX "")
 endif()
 
-if(DEFINED CMAKE_DEBUG_POSTFIX)
+if(DEFINED CMAKE_DEBUG_POSTFIX AND NOT WINRT)
   set(OPENCV_DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
 endif()
 
